4 sonar issue - fixed